--- a/styles.css
+++ b/styles.css
@@ -78,7 +78,7 @@ button:hover {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.8);
-    display: flex;
+    /* display: flex;, erro cometido ao adicionar duas tags(display) */
     align-items: center;
     justify-content: center;
 }
